--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.287.0",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.6.2",
     "mongose": "^0.0.2-security",
     "next": "13.5.4",
     "react": "^18",
