--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@uploadthing/react": "^5.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "encoding": "^0.1.13",
     "lucide-react": "^0.287.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
